--- a/MATH361_Rough_Draft.Rmd
+++ b/MATH361_Rough_Draft.Rmd
@@ -1,12 +1,32 @@
 ---
 title: "MATH361 Rough Draft"
-author: "Daniel Bhatti"
-date: "2024-11-14"
+author: "Joey Rodriguez and Daniel Bhatti"
+date: "2024-11-22"
 output: html_document
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
+```
+
+```
+# Use this code to pull data from Kaggle; this should already work with NYC Citibike dataset
+# Install and load necessary packages
+# install.packages("kaggler")  # If not already installed
+library(kaggler)
+
+# Authenticate with Kaggle (you need to set up your API key first)
+kgl_auth(key = "your_kaggle_api_key")
+
+# Download the dataset
+kgl_download_file(
+  owner_dataset = "akkithetechie/new-york-city-bike-share-dataset",
+  file_name = "NYC-BikeShare-2015-2017-combined.csv.zip",
+  destfile = "NYC-BikeShare-2015-2017-combined.csv.zip"
+)
+
+# Unzip the file
+unzip("NYC-BikeShare-2015-2017-combined.csv.zip", exdir = "NYC_BikeShare_Data")
 ```
 
 ## R Markdown
