--- a/MATH361_Rough_Draft.Rmd
+++ b/MATH361_Rough_Draft.Rmd
@@ -9,24 +9,10 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-```{r kaggler}
-# Use this code to pull data from Kaggle; this should already work with NYC Citibike dataset
-# Install and load necessary packages
-install.packages("kaggler")  # If not already installed
-library(kaggler)
-
-# Authenticate with Kaggle (you need to set up your API key first)
-kgl_auth(key = "56da16ec80846a2ba99795cee310fd45")
-
-# Download the dataset
-kgl_download_file(
-  owner_dataset = "akkithetechie/new-york-city-bike-share-dataset",
-  file_name = "NYC-BikeShare-2015-2017-combined.csv.zip",
-  destfile = "NYC-BikeShare-2015-2017-combined.csv.zip"
-)
-
-# Unzip the file
-unzip("NYC-BikeShare-2015-2017-combined.csv.zip", exdir = "NYC_BikeShare_Data")
+```{r read_data}
+library(readr)
+trip = read_csv('trip.csv')
+weather = read_csv('weather.csv.xls')
 ```
 
 ## R Markdown
